--- a/app/views/Movie&Tvshow/movie&Tvshow.ejs
+++ b/app/views/Movie&Tvshow/movie&Tvshow.ejs
@@ -22,7 +22,7 @@
             class="flex items-center justify-between text-sm text-gray-500 mb-4"
           >
             <span class="font-medium"
-              ><%= movie.Recipes.length %> recettes</span
+              ><%= movie.recipes.length %> recettes</span
             >
           </div>
           <a
@@ -52,7 +52,7 @@
           <div
             class="flex items-center justify-between text-sm text-gray-500 mb-4"
           >
-            <span class="font-medium"><%= show.Recipes.length %> recettes</span>
+            <span class="font-medium"><%= show.recipes.length %> recettes</span>
           </div>
           <a
             href="/films-series/<%= show.id_oeuvre %>/recettes"
