--- a/app/views/users/profile.ejs
+++ b/app/views/users/profile.ejs
@@ -154,11 +154,14 @@
       <div class="col-span-12 lg:col-span-8">
         <div class="bg-white rounded-xl shadow-sm p-6">
           <div class="col-span-12 lg:col-span-8 flex items-center justify-between">
-            <h2 class="text-xl font-semibold mb-6">Mes recettes favorites</h2>
-            <button class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded onclick="window.location.href='/proposition-recette'">
+            <h2 class="text-xl font-semibold mb-6">Mes recettes favorites</h2>           
+            <a href="/proposition-recette"> 
+              <button class="bg-orange-500 hover:bg-orange-700 text-white font-bold py-2 px-4 rounded">
                 Proposer une nouvelle recette
-            </button>
+              </button>
+            </a>
           </div>
+
           <div class="col-span-12 lg:col-span-8">
             <div class="bg-white rounded-xl shadow-sm p-6">
                 </div>
