--- a/app/views/users/addRecipe.ejs
+++ b/app/views/users/addRecipe.ejs
@@ -165,6 +165,48 @@
             </select>
           </div>
 
+
+          <!-- Ingredients associés -->
+          <div class="space-y-2">
+            <label for="id_ingredient" class="block text-sm font-medium text-gray-700 flex items-center gap-2">
+              <svg class="w-5 h-5 text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M7 4v16M17 4v16M3 8h4m10 0h4M3 12h18M3 16h4m10 0h4M4 20h16a1 1 0 001-1V5a1 1 0 00-1-1H4a1 1 0 00-1 1v14a1 1 0 001 1z" />
+              </svg>
+              Ingredients associés
+            </label>
+            <select id="id_ingredient" name="id_ingredient" multiple required
+              class="mt-1 block w-full rounded-lg border-gray-300 shadow-sm focus:border-orange-500 focus:ring-orange-500 transition-all duration-200">
+              <option value="">Sélectionner les ingrédients</option>
+              <% ingredients.forEach(ingredient=> { %>
+                <option value="<%= ingredient.id_ingredient%>">
+                  <%= ingredient.nom_ingredient %> (<%= ingredient.unite_mesure %>)
+                </option>
+                <% }) %>
+            </select>
+          </select>
+          </div>
+
+           <!-- Ustensils associés -->
+           <div class="space-y-2">
+            <label for="id_ingredient" class="block text-sm font-medium text-gray-700 flex items-center gap-2">
+              <svg class="w-5 h-5 text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M7 4v16M17 4v16M3 8h4m10 0h4M3 12h18M3 16h4m10 0h4M4 20h16a1 1 0 001-1V5a1 1 0 00-1-1H4a1 1 0 00-1 1v14a1 1 0 001 1z" />
+              </svg>
+              Ustensiles associés
+            </label>
+            <select id="id_utensil" name="utensils[]" multiple required  class="mt-1 block w-full rounded-lg border-gray-300 shadow-sm focus:border-orange-500 focus:ring-orange-500 transition-all duration-200">
+              <% utensils.forEach(utensil => { %>
+                  <option value="<%= utensil.id_ustensile %>">  
+                    <%= utensil.nom_ustensile %>
+                  </option>
+              <% }); %>
+          </select>
+
+           
+          </div>
+
           <!-- Étapes de préparation -->
           <div class="space-y-4">
             <label class="block text-sm font-medium text-gray-700 flex items-center gap-2">
