envoi de la recette dans la section recettes à valider de l'admin  ok

--- a/app/views/admin/dashboard.ejs
+++ b/app/views/admin/dashboard.ejs
@@ -363,7 +363,8 @@
           </a>
         </div>
         <div class="space-y-4">
-          <% recentActivities.recentRecipes.forEach(recipe => { %>
+            <% recipesToValidate.recipesToValidate.forEach(recipe => { %> 
+            <!-- changer en liste de recettes à valider -->
           <div
             class="flex items-center justify-between p-3 hover:bg-gray-50 rounded-lg transition-colors duration-150"
           >
