--- a/app/views/admin/recipesToValidate.ejs
+++ b/app/views/admin/recipesToValidate.ejs
@@ -45,9 +45,14 @@
               </p>
             </div>
             <div class="flex gap-2">
-              <a
+                <a
                 href="/admin/recettes/modifier/<%= recipe.id_recette %>"
                 class="px-3 py-1 bg-blue-500 text-white rounded"
+                >Voir/Modifier</a
+              >
+              <a
+                href="/admin/recettes/valider/<%= recipe.id_recette %>"
+                class="px-3 py-1 bg-green-500 text-white rounded"
                 >Valider</a
               >
               <form
