reparation des images

--- a/app/views/home/index.ejs
+++ b/app/views/home/index.ejs
@@ -150,7 +150,7 @@
         <!-- Recettes Cultes -->
         <div class="group relative overflow-hidden rounded-2xl">
           <img
-            src="/images/beer.jpg"
+            src="/images/butterbeer.jpg"
             alt="Recettes cultes"
             class="w-full h-80 object-cover transform group-hover:scale-105 transition-transform duration-500"
           />
@@ -190,7 +190,7 @@
         <!-- Desserts Fantastiques -->
         <div class="group relative overflow-hidden rounded-2xl">
           <img
-            src="/images/donut.jpg"
+            src="/images/simpsons_donuts_real.jpg"
             alt="Desserts fantastiques"
             class="w-full h-80 object-cover transform group-hover:scale-105 transition-transform duration-500"
           />
