--- a/app/views/recipes/catalog.ejs
+++ b/app/views/recipes/catalog.ejs
@@ -85,11 +85,12 @@
     <!-- Grille des recettes -->
     <div
       id="recipes-container"
-      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8"
+      class="flex overflow-x-auto space-x-4 md:grid md:grid-cols-2 lg:grid-cols-3 gap-8"     
     >
       <% recipes.forEach((recipe, index) => { %>
+            <!-- Gestion scrolling horizontal sur mobile-->
       <article
-        class="recipe-card bg-white rounded-2xl shadow-sm hover:shadow-lg transition-all duration-300 overflow-hidden group"
+      class=" min-w-[250px] md:min-w-0 recipe-card bg-white rounded-2xl shadow-sm hover:shadow-lg transition-all duration-300 overflow-hidden group"
         data-category="<%= recipe.id_categorie %>"
       >
         <div class="relative aspect-video overflow-hidden">
