ajout des ingrédients et des ustensiles sur les recettes proposées par le user

--- a/app/views/users/addRecipe.ejs
+++ b/app/views/users/addRecipe.ejs
@@ -175,7 +175,7 @@
               </svg>
               Ingredients associés
             </label>
-            <select id="id_ingredient" name="id_ingredient" multiple required
+            <select id="id_ingredient" name="ingredients[]" multiple required
               class="mt-1 block w-full rounded-lg border-gray-300 shadow-sm focus:border-orange-500 focus:ring-orange-500 transition-all duration-200">
               <option value="">Sélectionner les ingrédients</option>
               <% ingredients.forEach(ingredient=> { %>
