--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -144,7 +144,7 @@
 
     <!-- Menu mobile (caché par défaut) -->
     <div id="mobile-menu" class="hidden lg:hidden pb-6">
-      <div class="space-y-4">
+      <div class="space-y-4 text-center">
         <a
           href="/catalogue"
           class="block text-gray-700 hover:text-orange-500 transition-colors duration-200"
