--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -16,6 +16,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <%- defineContent('styles') %>
   </head>
   <body class="bg-gray-50 font-['Inter']">
