chore:[tailwind-cli]: ajout du fichier compile <head> sur layout.ejs

--- a/app/views/layout.ejs
+++ b/app/views/layout.ejs
@@ -6,7 +6,7 @@
     <title>CinéDélices</title>
     <link rel="stylesheet" href="/CSS/reset.css" />
     <link rel="stylesheet" href="/CSS/style.css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/CSS/output.css" />
     <link
       rel="icon"
       type="image/svg+xml"
